# FIM-Decision-System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-production.yaml
configs/vector/: vector.yaml
src/: main.py
src/ingest/: api.py  wazuh_api.py
src/ingest/schemas/: wazuh.py
tests/: test_health.py  test_ingest_wazuh.py
