[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Papanya Siriwattanaworakul",email = "papanya2546@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
